--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.26.3)
 
 set(PROJECT_NAME OnlineRestaurant)
+set(MY_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 project(${PROJECT_NAME})
 
-add_executable(${PROJECT_NAME} src/main.cpp)
+add_subdirectory(src)
